samples/_failures_safe/1761632595_f4904a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e03a54f.c: In function ‘main’:
./samples/SAFE/__tmp_9e03a54f.c:190:12: error: missing terminating " character
  190 |     printf("Available events: 0=START, 1=DATA, 2=PROCESS, 3=SUCCESS, 4=FAILURE,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9e03a54f.c:190:5: error: expected expression at end of input
  190 |     printf("Available events: 0=START, 1=DATA, 2=PROCESS, 3=SUCCESS, 4=FAILURE,
      |     ^~~~~~
./samples/SAFE/__tmp_9e03a54f.c:190:5: error: expected declaration or statement at end of input
